samples/_failures_safe/1761072065_7afa02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07029176.c: In function ‘main’:
./samples/SAFE/__tmp_07029176.c:137:16: error: missing terminating " character
  137 |         printf("Cannot compute det
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_07029176.c:137:9: error: expected expression at end of input
  137 |         printf("Cannot compute det
      |         ^~~~~~
./samples/SAFE/__tmp_07029176.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_07029176.c:137:9: error: expected declaration or statement at end of input
